--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,9 @@
     "node": "8"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.15.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
