--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,14 @@
     "node": "8"
   },
   "dependencies": {
+    "busboy": "^0.3.1",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "firebase": "^7.15.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
