--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://asia-east2-twitter-ee105.cloudfunctions.net/api"
 }
